--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@ margin-top: 300px;
 
     <ul>
   
-    <li><a href="http://127.0.0.1:5500/anaden.html"><i class="fa-solid fa-house">ANASAYFA</i></a></li>
-    <li><a href="http://127.0.0.1:5500/iletisim.html"><i class="fa-regular fa-address-card">İLETİŞİM</i></a></li>
-    <li><a href="http://127.0.0.1:5500/prjelerim.html"><i class="fa-solid fa-diagram-project">PROJELER</i></a></li>
-    <li><a href="http://127.0.0.1:5500/anket.html"><i class="fa-solid fa-square-poll-vertical">ANKET</i></a></li>
+    <li><a href="https://kardelenin.github.io/blog.github.io/"><i class="fa-solid fa-house">ANASAYFA</i></a></li>
+    <li><a href="https://kardelenin.github.io/iletisim.github.io/"><i class="fa-regular fa-address-card">İLETİŞİM</i></a></li>
+    <li><a href="https://kardelenin.github.io/projelerim.github.io/"><i class="fa-solid fa-diagram-project">PROJELER</i></a></li>
+    <li><a href="https://kardelenin.github.io/anket.github.io/"><i class="fa-solid fa-square-poll-vertical">ANKET</i></a></li>
 </ul>   
  <h1 id="baslik">PROJELERİM</h1>  
 
